# streamflow

./: .env.example  .gitignore  Dockerfile  Dockerfile.flink  LICENSE  README.md  pyproject.toml  requirements.txt  train_tick_by_tic.txt
api/db/: __init__.py
api/db/services/: __init__.py  db_models.py
api/utils/: __init__.py  common.py  configs.py  json_encode.py
common/: config_utils.py  constants.py  decorator.py  setting.py  time_utils.py
conf/: services_conf.yaml
consumer/: base_consumer.py  dataQuote.py  dataTrade.py  foreignRoom.py  index.py  securitiesStatus.py
dataSSI/: client.py  crawlSector.py  initialDataLoad.py  pushSectorPsql.py  streaming_data.py  test_client.py
docker/: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh  init.sql  migration.sh  streamflow_conf.toml
docker/scriptDB/: script_create_db_psql.md
etl/: __init__.py  dimDate.py  dimExchange.py  dimIndex.py  dimSession.py  dimSymbol.py  dimTime.py  factMarketIndex.py  factQuote.py  factTrade.py  featureML.py
kafkaStream/: flink_candlestick_1m.py  producer_market_data.py
machine_learning/: stock_prediction.py
notebook/: index_vizualization.ipynb  symbol_vizualization.ipynb
orchestration/: orchestration.sh.example  orchestration_consumer.sh.example
scriptDB/: script_create_dw.txt
test/testFlink/: test_flink.py
test/testML/: test.py  train_tick_by_tic.py
test/testStream/: test_client.py  test_stream.py
